feat:added design system skeleton

--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+    <div class="logo">
+
+    </div>
+    <div class="brand-colors">
+
+    </div>
+    <div class="button-styles">
+
+    </div>
+    <div class="typography">
+
+    </div>
+    <div class="icons">
+
+    </div>
+    <div class="form-fields">
+
+    </div>
+    <div class="components">
+
+    </div>
     
 </body>
 </html>
