refactor: removed comments, refactored icons and forms

--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -12,8 +12,6 @@
     <div class="brand-colors"></div>
     <div class="button-styles"></div>
     <div class="typography"></div>
-
-    <!-- WIP ICONS-->
     <div class="icons">
       <div class="icons__content">
         <div class="icons__text">
@@ -44,10 +42,14 @@
               <div class="sun">
                 <img src="../assets/icons/main/sun-yellow.svg" />
               </div>
-              <img src="../assets/icons/main/moon-black.svg" />
+              <div class="moon-alt">
+                <img src="../assets/icons/main/moon-black.svg" />
+              </div>
             </span>
             <span class="icons__svg-content--dark">
-              <img src="../assets/icons/main/sun-black.svg" />
+              <div class="sun-alt">
+                <img src="../assets/icons/main/sun-black.svg" />
+              </div>
               <div class="moon">
                 <img src="../assets/icons/main/moon-lilla.svg" />
               </div>
@@ -79,15 +81,11 @@
         </div>
       </div>
     </div>
-    <!-- WIP ICONS-->
-    <!-- WIP FORM-FIELDS-->
     <div class="form-fields">
       <div class="form-fields__text">
         <h2>FORM FIELDS</h2>
       </div>
-
       <div class="form-fields__content">
-        <!-- form-fields-left -->
         <div class="form-fields__content-l">
           <div class="input-wrapper">
             <input
@@ -102,8 +100,6 @@
             </div>
           </div>
         </div>
-        <!-- form-fields-left -->
-        <!-- form-fields-center -->
         <div class="form-fields__content-c">
           <div class="input-wrapper">
             <input
@@ -115,14 +111,7 @@
               <span>Please confirm your email format</span>
             </div>
           </div>
-          <!-- <div class="button-wrapper">
-            <div class="button-wrapper__text">
-              <span>Sign-in / Register</span>
-            </div>
-          </div> -->
         </div>
-        <!-- form-fields-center -->
-        <!-- form-fields-right -->
         <div class="form-fields__content-r">
           <div class="input-wrapper">
             <input
@@ -137,10 +126,8 @@
             </div>
           </div>
         </div>
-        <!-- form-fields-right -->
       </div>
     </div>
-    <!-- WIP FORM-FIELDS-->
     <div class="components"></div>
   </body>
 </html>
