--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -8,8 +8,74 @@
     <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
-    <div class="logo"></div>
-    <div class="brand-colors"></div>
+    <div class="logo">
+      <div class="logo__content">
+        <div class="logo__text">
+          <h2>Logos</h2>
+        </div>
+        <div class="logo__svg">
+          <div class="logo__svg-content">
+            <span class="logo__svg-content--main">
+              <img src="../assets/logos/bunny-logo-hd.png" alt="logo rabbit" height="100px">
+              <img src="../assets/logos/PurpleRabbit.svg" alt="purple rabbit" height="100px">
+              <img src="../assets/logos/bunny-logo-main.svg" alt="logo rabbit text transparent" height="100px" width="500px">
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="brandColor">
+      <div class="brandColor__content">
+        <div class="brandColor__text">
+          <h1>Color brand</h1>
+        </div>
+<div class="cardGroup">
+  <div class="cardGroup__card">
+    <div class="card__description cardGroup__cardDescription hvr"
+         id="color-1">
+    </div>
+    <div class="card__color">
+        <span>Indigo</span>
+        <span>rgba(60, 23, 134, 1)</span>
+        <span>#3c1786</span>
+    </div>
+  </div>
+  
+  <div class="cardGroup__card">
+    <div class="card__description cardGroup__cardDescription hvr"
+         id="color-2">
+    </div>
+    <div class="card__color">
+        <span>White</span>
+        <span>rgba(255, 255, 255, 1)</span>
+        <span>#ffffff</span>
+    </div>
+  </div>
+  
+  <div class="cardGroup__card hvr-rectangle-in">
+    <div class="card__description cardGroup__cardDescription hvr"
+         id="color-3">
+    </div>
+    <div class="card__color">
+        <span>DimGray</span>
+        <span>rgba(39, 38, 44, 1)</span>
+        <span>#27262c</span>
+    </div>
+  </div>
+  
+  <div class="card cardGroup__card hvr-rectangle-in">
+    <div class="card__description cardGroup__cardDescription hvr"
+         id="color-4">
+    </div>
+    <div class="card__color">
+        <span>DeepSkyBlue</span>
+        <span>rgba(31, 199, 212, 1)</span>
+        <span>#1fc7d4</span>
+    </div>
+  </div>
+</div>
+</div>
+</div>
     <div class="button-styles"></div>
     <div class="typography"></div>
 
@@ -20,124 +86,12 @@
           <h2>ICONS</h2>
         </div>
         <div class="icons__svg">
-          <div class="icons__svg-content">
-            <span class="icons__svg-content--main">
-              <img src="../assets/icons/main/bunny-icon-main.svg" />
-              <img src="../assets/icons/main/favicon.ico" />
-              <img src="../assets/icons/main/bunny-icon-violet.svg" />
-              <img src="../assets/icons/main/bunny-deck-icon.svg" />
-              <img src="../assets/icons/main/cronometer-icon.svg" />
-              <img src="../assets/icons/main/ethereum-hd.png" />
-              <img src="../assets/icons/main/bnb-cube.svg" />
-            </span>
-            <span class="icons__svg-content-arrow--white">
-              <img src="../assets/icons/main/arrow-left-lilla.svg" />
-              <img src="../assets/icons/main/arrow-right-white.svg" />
-              <img src="../assets/icons/main/x-white.svg" />
-            </span>
-            <span class="icons__svg-content-arrow--black">
-              <img src="../assets/icons/main/arrow-left-cyan.svg" />
-              <img src="../assets/icons/main/arrow-right-cyan.svg" />
-              <img src="../assets/icons/main/x-violet.svg" />
-            </span>
-            <span class="icons__svg-content--light">
-              <div class="sun">
-                <img src="../assets/icons/main/sun-yellow.svg" />
-              </div>
-              <img src="../assets/icons/main/moon-black.svg" />
-            </span>
-            <span class="icons__svg-content--dark">
-              <img src="../assets/icons/main/sun-black.svg" />
-              <div class="moon">
-                <img src="../assets/icons/main/moon-lilla.svg" />
-              </div>
-            </span>
-            <span class="icons__svg-content--sns">
-              <img src="../assets/icons/main/globe-lilla.svg" />
-              <img src="../assets/icons/main/settings-lilla.svg" />
-              <img src="../assets/icons/main/open-lilla.svg" />
-              <img src="../assets/icons/main/three-dots-lilla.svg" />
-              <img src="../assets/icons/main/sns-twitter-lilla.svg" />
-              <img src="../assets/icons/main/sns-telegram-lilla.svg" />
-              <img src="../assets/icons/main/sns-reddit-lilla.svg" />
-              <img src="../assets/icons/main/sns-instagram-lilla.svg" />
-              <img src="../assets/icons/main/sns-github-lilla.svg" />
-              <img src="../assets/icons/main/sns-discord-lilla.svg" />
-              <img src="../assets/icons/main/sns-youtube-lilla.svg" />
-            </span>
-            <span class="icons__svg-content--other">
-              <img src="../assets/icons/main/stacked-pink.svg" />
-              <img src="../assets/icons/main/stacked-violet.svg" />
-              <img src="../assets/icons/main/stacked-lilla.svg" />
-              <img src="../assets/icons/main/trades-lilla.svg" />
-              <img src="../assets/icons/main/trades-alt.svg" />
-              <img src="../assets/icons/main/trades-cyan.svg" />
-              <img src="../assets/icons/main/users-lilla.svg" />
-              <img src="../assets/icons/main/users-black.svg" />
-            </span>
-          </div>
-        </div>
+    
       </div>
-    </div>
     <!-- WIP ICONS-->
     <!-- WIP FORM-FIELDS-->
     <div class="form-fields">
-      <div class="form-fields__text">
-        <h2>FORM FIELDS</h2>
-      </div>
-
-      <div class="form-fields__content">
-        <!-- form-fields-left -->
-        <div class="form-fields__content-l">
-          <div class="input-wrapper">
-            <input
-              class="input-wrapper__input"
-              placeholder="Email"
-              type="email"
-            />
-          </div>
-          <div class="button-wrapper">
-            <div class="button-wrapper__text">
-              <span>Sign-in / Register</span>
-            </div>
-          </div>
-        </div>
-        <!-- form-fields-left -->
-        <!-- form-fields-center -->
-        <div class="form-fields__content-c">
-          <div class="input-wrapper">
-            <input
-              class="input-wrapper__input"
-              placeholder="Email"
-              type="email"
-            />
-            <div class="error">
-              <span>Please confirm your email format</span>
-            </div>
-          </div>
-          <!-- <div class="button-wrapper">
-            <div class="button-wrapper__text">
-              <span>Sign-in / Register</span>
-            </div>
-          </div> -->
-        </div>
-        <!-- form-fields-center -->
-        <!-- form-fields-right -->
-        <div class="form-fields__content-r">
-          <div class="input-wrapper">
-            <input
-              class="input-wrapper__input"
-              placeholder="1234@example.com"
-              type="email"
-            />
-          </div>
-          <div class="button-wrapper">
-            <div class="button-wrapper__text">
-              <span>Sign-in</span>
-            </div>
-          </div>
-        </div>
-        <!-- form-fields-right -->
+     
       </div>
     </div>
     <!-- WIP FORM-FIELDS-->
