feat: created phishing warning and carousel components

--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -100,6 +100,42 @@
     <div class="components">
       <h2>Components</h2>
       <div class="components__content">
+        <div class="components__description components__description--width">
+          <p class="components__text">Phishing Warning</p>
+          <div class="phishing-popup">
+            <div class="phishing-popup__content">
+              <div class="phishing-popup__main">
+                <img src="../assets/images/other/phishing-warning-bunny.png" />
+                <div class="phishing-popup__text">
+                  <p>
+                    <span class="phishing-popup__text--orange"
+                      >PHISHING WARNING:</span
+                    >
+                    please make sure you're visiting
+                    <span class="phishing-popup__text--white"
+                      >https://pancakeswap.finance</span
+                    >
+                    - check the URL carefully.
+                  </p>
+                </div>
+              </div>
+              <button class="phishing-popup__close">
+                <svg
+                  viewBox="0 0 24 24"
+                  color="#FFFFFF"
+                  width="20px"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="sc-231a1e38-0 iNUyNs"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M18.3 5.70997C17.91 5.31997 17.28 5.31997 16.89 5.70997L12 10.59L7.10997 5.69997C6.71997 5.30997 6.08997 5.30997 5.69997 5.69997C5.30997 6.08997 5.30997 6.71997 5.69997 7.10997L10.59 12L5.69997 16.89C5.30997 17.28 5.30997 17.91 5.69997 18.3C6.08997 18.69 6.71997 18.69 7.10997 18.3L12 13.41L16.89 18.3C17.28 18.69 17.91 18.69 18.3 18.3C18.69 17.91 18.69 17.28 18.3 16.89L13.41 12L18.3 7.10997C18.68 6.72997 18.68 6.08997 18.3 5.70997Z"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
         <div class="components__description">
           <p class="components__text">Warning Popup</p>
           <div class="popup">
@@ -135,17 +171,7 @@
             </div>
           </div>
         </div>
-        <div class="components__description">
-          <p class="components__text">Dropdown</p>
-          <div class="dropdown">
-            <a class="dropbtn" href="#">Dropdown</a>
-            <div class="dropdown__content">
-              <a href="#">Link</a>
-              <a href="#">Link</a>
-              <a href="#">Link</a>
-            </div>
-          </div>
-        </div>
+
         <div class="components__description">
           <p class="components__text">Details Cards</p>
           <div class="card-details">
@@ -287,6 +313,84 @@
                   ></path>
                 </svg>
               </button>
+            </div>
+          </div>
+        </div>
+        <div class="components__description">
+          <p class="components__text">Dropdown</p>
+          <div class="dropdown">
+            <a class="dropbtn" href="#">Dropdown</a>
+            <div class="dropdown__content">
+              <a href="#">Link</a>
+              <a href="#">Link</a>
+              <a href="#">Link</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="components__description components__description--carousel">
+          <p class="components__text">Carousel</p>
+          <div class="carousel">
+            <div class="carousel__protector carousel__item--selected">
+              <img src="../assets/images/other/pancakeProtectorBg.png" />
+              <div class="carousel__left">
+                <img src="../assets/images/other/ethXpancakeswap.png" />
+                <div class="carousel__gradient-text">
+                  Join Pancake Protectors
+                </div>
+                <div
+                  class="carousel__gradient-text carousel__gradient-text--small"
+                >
+                  Exclusive Perks for PancakeSwap Bunnies and Squads
+                </div>
+                <div class="carousel__links">
+                  <a href="#">Details</a>
+                  <div class="carousel__separator-line"></div>
+                  <a href="#"
+                    >Play Now
+                    <svg
+                      viewBox="0 0 24 24"
+                      color="white"
+                      width="20px"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="sc-231a1e38-0 iDcbEw"
+                    >
+                      <path
+                        d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="carousel__right">
+                <img src="../assets/images/other/pancakeProtectorBunny.png" />
+              </div>
+            </div>
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__item"></div>
+            <!-- da cambiare nome -->
+            <div class="carousel__nav">
+              <button
+                class="carousel__button carousel__button--selected"
+              ></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
+              <button class="carousel__button"></button>
             </div>
           </div>
         </div>
