--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -15,8 +15,9 @@
         </div>
         <div class="logo__svg">
           <div class="logo__svg-content">
-            <span class="logo__svg-content--main">
-              <img src="../assets/logos/bunny-logo-hd.png" alt="bunny logo">
+            <div class="logo__svg-content--main">
+
+              <img src="../assets/logos/bunny-logo-hd.png" alt="bunny logo"/>
               <svg
                 viewBox="0 0 48 48"
                 height="48px"
@@ -78,7 +79,7 @@
                   fill="#633001"
                 ></path>
               </svg>
-            </span>
+            </div>
           </div>
         </div>
       </div>
@@ -86,10 +87,10 @@
     <div class="brandColor">
       <div class="brandColor__content">
         <div class="brandColor__text">
-          <h2>Color brand</h2>
+          <h2>Primary Color</h2>
         </div>
-        <div class="cardGroup">
-          <div class="cardGroup__card">
+        <div class="container">
+          <div class="cardGroup">
             <div
               class="card__description cardGroup__cardDescription hvr"
               id="color-1"
@@ -101,7 +102,7 @@
             </div>
           </div>
 
-          <div class="cardGroup__card">
+          <div class="cardGroup">
             <div
               class="card__description cardGroup__cardDescription hvr"
               id="color-2"
@@ -113,7 +114,7 @@
             </div>
           </div>
 
-          <div class="cardGroup__card hvr-rectangle-in">
+          <div class="cardGroup">
             <div
               class="card__description cardGroup__cardDescription hvr"
               id="color-3"
@@ -125,7 +126,7 @@
             </div>
           </div>
 
-          <div class="card cardGroup__card hvr-rectangle-in">
+          <div class="cardGroup">
             <div
               class="card__description cardGroup__cardDescription hvr"
               id="color-4"
@@ -134,6 +135,56 @@
               <span>DeepSkyBlue</span>
               <span>rgba(31, 199, 212, 1)</span>
               <span>#1fc7d4</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="brandColor__text">
+          <h2>Secondary Color</h2>
+        </div>
+        <div class="container">
+          <div class="cardGroup">
+            <div
+              class="card__description cardGroup__cardDescription hvr"
+              id="color-5"
+            ></div>
+            <div class="card__color">
+              <span>Gold</span>
+              <span>rgba(240, 185, 11, 1)</span>
+              <span>#f0b90b</span>
+            </div>
+          </div>
+          <div class="cardGroup">
+            <div
+              class="card__description cardGroup__cardDescription hvr"
+              id="color-6"
+            ></div>
+            <div class="card__color">
+              <span>SaddleBrown</span>
+              <span>rgba(99, 48, 1, 1)</span>
+              <span>#633001</span>
+            </div>
+          </div>
+          <div class="cardGroup">
+            <div
+              class="card__description cardGroup__cardDescription hvr"
+              id="color-7"
+            ></div>
+            <div class="card__color">
+              <span>Blue</span>
+              <span>rgba(0, 0, 240, 1)</span>
+              <span>#0000ee</span>
+            </div>
+          </div>
+          <div class="cardGroup">
+            <div
+              class="card__description cardGroup__cardDescription hvr"
+              id="color-8"
+            ></div>
+            <div class="card__color">
+              <span>GoldenRod</span>
+              <span>rgba(255, 178, 56, 1)</span>
+              <span>#ffb237</span>
             </div>
           </div>
         </div>
