fix: fixed section title

--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -1299,7 +1299,9 @@
       </div>
     </div>
     <div class="components">
-      <h2>Components</h2>
+      <div class="components__title">
+        <h2>Components</h2>
+      </div>
       <div class="components__content">
         <div class="components__description components__description--width">
           <p class="components__text">Phishing Warning</p>
