--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -93,93 +93,139 @@
         </div>
       </div>
     </div>
-    <h1>TYPOGRAPHY</h1>
-
+    <div class="container-tipography__title">
+        <h2>TYPOGRAPHY</h2>
+      </div>
     <div class="container-tipography">
-      <div class="first-column-tipog">
-        <div class="container-navbar">
-          <div class="title nav">
-            <p class="intest">Navbar</p>
+      
+
+      <div class="container-tipography__first-column">
+        <div class="container-tipography__navbar">
+          <div class="container-tipography__title container-tipography__nav">
+            <p
+              class="container-tipography__intest container-tipography__intest--purple"
+            >
+              Navbar
+            </p>
           </div>
-          <div class="size-family-nav">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-nav">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>16 px</span>
           </div>
         </div>
 
-        <div class="space"></div>
+        <div class="container-tipography__space"></div>
 
-        <div class="container-title">
-          <div class="name-tip">
-            <p class="intest">Title</p>
+        <div class="container-tipography__container-title">
+          <div class="container-tipography__name-tip">
+            <p
+              class="container-tipography__intest container-tipography__intest--fs48"
+            >
+              Title
+            </p>
           </div>
-          <div class="size-family-title">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-title">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>48 px</span>
           </div>
         </div>
 
-        <div class="space"></div>
+        <div class="container-tipography__space"></div>
 
-        <div class="container-button-tip">
-          <div class="button-tip">
-            <p class="intest">Button-text</p>
+        <div class="container-tipography__container-button">
+          <div class="container-tipography__button-tip">
+            <p
+              class="container-tipography__intest container-tipography__intest--skyblue"
+            >
+              Button-text
+            </p>
           </div>
-          <div class="size-family-button">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-button">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>16 px</span>
           </div>
         </div>
       </div>
 
-      <div class="second-column-tipog">
-        <div class="container-footer">
-          <div class="footer-tip">
-            <p class="intest">Footer</p>
+      <div class="container-tipography__second-column">
+        <div class="container-tipography__container-footer">
+          <div class="container-tipography__footer-tip">
+            <p
+              class="container-tipography__intest container-tipography__intest--violet"
+            >
+              Footer title
+            </p>
+            <p
+              class="container-tipography__intest container-tipography__intest--white"
+            >
+              Footer link
+            </p>
           </div>
-          <div class="size-family-footer">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-footer">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>16 px</span>
           </div>
         </div>
 
-        <div class="space"></div>
+        <div class="container-tipography__space"></div>
 
-        <div class="container-label">
-          <div class="label-tip">
-            <p class="intest">Label</p>
+        <div class="container-tipography__container-label">
+          <div class="container-tipography__label-tip">
+            <p class="container-tipography__intest">Label</p>
           </div>
-          <div class="size-family-label">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-label">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>16 px</span>
           </div>
         </div>
 
-        <div class="space"></div>
+        <div class="container-tipography__space"></div>
 
-        <div class="container-nft">
-          <div class="nft-tip">
-            <p class="intest">Nft description</p>
+        <div class="container-tipography__container-nft">
+          <div class="container-tipography__nft-tip">
+            <p
+              class="container-tipography__intest container-tipography__intest--fs20 container-tipography__intest--fs20__purpledark"
+            >
+              Nft description
+            </p>
           </div>
-          <div class="size-family-nft">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-nft">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>20 px</span>
           </div>
         </div>
       </div>
 
-      <div class="third-column-tipog">
-        <div class="container-body">
-          <div class="body-tip">
-            <p class="intest">Body</p>
+      <div class="container-tipography__third-column">
+        <div class="container-tipography__container-body">
+          <div class="container-tipography__body-tip">
+            <p
+              class="container-tipography__intest container-tipography__intest--fs20 container-tipography__intest--fs20__turquoise"
+            >
+              Body
+            </p>
+            <p
+              class="container-tipography__intest container-tipography__intest--fs20 container-tipography__intest--fs20 container-tipography__intest--fs20__violet"
+            >
+              Body
+            </p>
+            <p
+              class="container-tipography__intest container-tipography__intest--fs20 container-tipography__intest--fs20__darkviolet"
+            >
+              Body night
+            </p>
           </div>
-          <div class="size-family-body">
-            <p class="font-family">Kanit, Sans-Serif</p>
+          <div class="container-tipography__size-family-body">
+            <p class="container-tipography__font-family">Kanit, Sans-Serif</p>
             <span>20 px</span>
           </div>
+          <div
+            class="container-tipography__space container-tipography__space--body"
+          ></div>
         </div>
       </div>
     </div>
+
     <div class="icons"></div>
     <div class="form-fields"></div>
     <div class="components"></div>
