refactor: cleaned code, deleted repetitions, fixed colors wrongly assigned

--- a/designsystem/index.html
+++ b/designsystem/index.html
@@ -197,7 +197,7 @@
     <div class="icons">
       <div class="icons__content">
         <div class="icons__text">
-          <h2>ICONS</h2>
+          <h2>Icons</h2>
         </div>
         <div class="icons__svg">
           <div class="icons__svg-content">
@@ -1239,9 +1239,9 @@
 
     <div class="form-fields">
       <div class="form-fields__text">
-        <h2>FORM FIELDS</h2>
+        <h2>Form Fields</h2>
       </div>
-      <div class="form-fields">
+      <div class="form-fields-main">
         <div class="form-fields-content">
           <div class="form-fields__content-d">
             <div class="form-fields__content-di">
