fix: fixed carousel item

--- a/index.html
+++ b/index.html
@@ -45,51 +45,6 @@
     <div class="hero-section">
       <div class="hero-section__carousel-container">
         <div class="carousel">
-          <div class="carousel__domains carousel__item">
-            <div class="carousel__left">
-              <div class="carousel__text">
-                <span class="carousel__logo-img carousel__logo-img--usn">
-                  <img src="./assets/images/body-image/usnTitle.png" />
-                </span>
-                <div
-                  class="carousel__gradient-text carousel__gradient-text--orange"
-                >
-                  Get your custom branded subdomains .pancake.crypto for just
-                  $9.99
-                </div>
-                <div class="carousel__links">
-                  <a href="#">Get your domain</a>
-                  <div class="carousel__separator-line"></div>
-                  <a href="#">Learn More </a>
-                </div>
-              </div>
-            </div>
-            <span class="carousel__right-image carousel__right-image--usn">
-              <img
-                src="./assets/images/body-image/usnBunny.png"
-                alt="usn bunny"
-              />
-            </span>
-            <span class="carousel__right-usn-logo">
-              <img
-                src="./assets/images/body-image/usnLogo.png"
-                alt="usn logo"
-              />
-            </span>
-            <span class="carousel__right-star carousel__right-star--big">
-              <img
-                src="./assets/images/body-image/liquidStakingBunnyBg3.png"
-                alt="star"
-              />
-            </span>
-            <span class="carousel__right-star carousel__right-star--sm">
-              <img
-                src="./assets/images/body-image/liquidStakingBunnyBg3.png"
-                alt="star"
-              />
-            </span>
-            <span class="carousel__blue-ball"></span>
-          </div>
           <div class="carousel__protector carousel__item">
             <div class="carousel__bg">
               <img
@@ -132,7 +87,7 @@
               </div>
             </div>
             <span
-              class="carousel__right-image carousel__right-image--protector"
+              class="carousel__bunny-image carousel__bunny-image--protector"
             >
               <img src="./assets/images/body-image/pancakeProtectorBunny.png" />
             </span>
@@ -178,12 +133,18 @@
                 </div>
               </div>
             </div>
-            <span class="carousel__right-image carousel__right-image--usn">
+            <span class="carousel__bunny-image carousel__bunny-image--trade">
               <img
-                src="./assets/images/body-image/usnBunny.png"
-                alt="usn bunny"
+                src="./assets/images/body-image/trading-reward-bunny.webp"
+                alt="trading reward bunny"
               />
             </span>
+            <div class="carousel__bg carousel__bg--trade">
+              <img
+                src="./assets/images/body-image/trading-reward-bg.webp"
+                alt=""
+              />
+            </div>
           </div>
           <!-- da cambiare nome -->
           <div class="carousel__item"></div>
@@ -198,7 +159,6 @@
           <!-- da cambiare nome -->
           <div class="carousel__nav">
             <button class="carousel__button carousel__button--active"></button>
-            <button class="carousel__button"></button>
             <button class="carousel__button"></button>
             <button class="carousel__button"></button>
             <button class="carousel__button"></button>
