feat: added crypto section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="hero-section"></div>
     <div class="section-2"></div>
     <div class="section-3"></div>
-    <div class="section-4"></div>
+    <div class="crypto-section"></div>
     <div class="section-5"></div>
     <div class="section-6"></div>
     <div class="section-7"></div>
