--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <div class="hero-section"></div>
     <div class="section-2"></div>
     <div class="section-3">
-         <!-- <div class="divider-small-up">
+          <div class="divider">
             <svg xmlns="http://www.w3.org/2000/svg" width="100vw" class="sc-4ba21b47-0 IIbzK" color="text"
                 preserveAspectRatio="none" viewBox="0 0 1660 48">
                 <path d="M1660 48C1139.02 46.189 336.256 15.245 0 0h1660v48Z" />
             </svg>
-        </div>  -->
+        </div>  
         <div class="section-3-wrapper">
             <div class="section-3-wrapper-item">
                 <h2 class="small-title"><span class="color-sec">Trade</span> anything. No <br> registration, no hassle.
@@ -65,21 +65,14 @@
                 </div>
             </div>
             <div class="animation-box moving-cryptos">
-              <div class="btc"><img src="./assets/images/bitcoin2.webp" alt="btc coin" class="animation-layer"
+              <div class="btc"><img src="./assets/images/Bnb.webp" alt="bnb coin" class="animation-layer"
+                  data-layer="-2"></div>
+              <div class="btc"><img src="./assets/images/Btc.webp" alt="btc coin" class="animation-layer"
                   data-layer="0"></div>
-                <div class="btc"><img src="./assets/images/Bitcoin.webp" alt="bnb coin" class="animation-layer"
-                    data-layer="-2"></div>
-                <div class="btc"><img src="./assets/images/Cakebunny.webp" alt="cake coin" class="animation-layer"
+                <div class="btc"><img src="./assets/images/Cake.webp" alt="cake coin" class="animation-layer"
                     data-layer="2"></div>
             </div>
         </div> 
-
-        <!-- <div class="divider-small-down">
-            <svg xmlns="http://www.w3.org/2000/svg" width="100vw" class="sc-4ba21b47-0 IIbzK" color="text"
-                preserveAspectRatio="none" viewBox="0 0 1660 48">
-                <path d="M1660 48C1139.02 46.189 336.256 15.245 0 0h1660v48Z" />
-            </svg>
-        </div>
     </div>
     <div class="section-4"></div>
     <div class="section-5"></div>
