feat: completed nft page

--- a/nft.html
+++ b/nft.html
@@ -563,7 +563,7 @@
     <div class="nft-section">
       <div class="nft-section__cards-wrapper">
         <div class="nft-section__cards-header">
-          <h2>Newest Collections</h2>
+          <h2 class="nft-section__section-title">Newest Collections</h2>
           <a href="#"
             >View All
             <svg
@@ -822,7 +822,7 @@
           </div>
         </div>
         <div class="nft-section__cards-header">
-          <h2>Hot Collections</h2>
+          <h2 class="nft-section__section-title">Hot Collections</h2>
           <a href="#"
             >View All
             <svg
@@ -1080,8 +1080,14 @@
             </a>
           </div>
         </div>
-        <div class="nft-section__cards-header">
-          <h2>Newest Collections</h2>
+        <div
+          class="nft-section__cards-header nft-section__cards-header--arrivals"
+        >
+          <h2
+            class="nft-section__section-title nft-section__section-title--arrivals"
+          >
+            Newest Arrivals
+          </h2>
           <a href="#"
             >View All
             <svg
@@ -1097,7 +1103,9 @@
             </svg>
           </a>
         </div>
-        <div class="nft-section__cards-container">
+        <div
+          class="nft-section__cards-container nft-section__cards-container--lg"
+        >
           <div class="card-nft--lg">
             <a href="#">
               <div class="card-nft__image">
@@ -1721,7 +1729,7 @@
             <div class="faq-section__container">
               <div class="faq-section__shown">
                 <span class="faq-section__question"
-                  >I sold an NFT,where's my BNB</span
+                  >I sold an NFT, where’s my BNB?</span
                 >
                 <button class="faq-section__button">
                   Details<svg
