refactor: changed currency value, added animation class to footer-bunny-logo for consistency

--- a/index.html
+++ b/index.html
@@ -1986,7 +1986,10 @@
                     >
                   </li>
                 </ul>
-                <div display="none,,block" class="sc-e15886e2-0 fvwMsc">
+                <div
+                  display="none,,block"
+                  class="sc-e15886e2-0 fvwMsc bunny-logo-main"
+                >
                   <svg
                     viewBox="0 0 1281 199"
                     width="160px"
@@ -2638,7 +2641,7 @@
                         </defs>
                       </svg>
                       <div color="#B8ADD2" font-size="16px" class="money-value">
-                        $1.130
+                        $1.414
                       </div>
                     </a>
                   </div>
